feat(adapter): 重命名 OpenAI 适配器并支持 Azure OpenAI feat(model): 添加 OpenAI 响应模型及相关类
好吧，之前都是乱写的，起码现在openai的流式能用